refactor: 実装ファイルの拡張子を .cpp から .inl に変更
- FlexHALの3層構造（プラットフォーム・フレームワーク・RTOS）に合わせた実装ファイル管理の改善
- PlatformIOとArduino IDEの両方で同じコードベースを使用できるよう最適化
- 不要なコンパイル対象を減らし、ビルドプロセスをクリーン化
- フレームワーク層のSDL実装を明示的にインクルードする構造に変更

--- a/platformio.ini
+++ b/platformio.ini
@@ -2,7 +2,7 @@
 
 [env]
 build_flags =-Wall -Wextra -Wreturn-local-addr -Werror=format -Werror=return-local-addr
-lib_ldf_mode = deep
+lib_ldf_mode = chain
 test_framework = googletest
 test_build_src = true
 ; lib_deps=m5stack/M5Unified
@@ -19,6 +19,8 @@ lib_deps = ${env.lib_deps}
 
 [env:gpio_blink_native]
 extends=sdl
-build_src_filter = +<*> -<.git/> -<.svn/> +<../examples/gpio_blink>
-
-
+build_src_filter = -<*> +<../examples/gpio_blink/src>
+lib_deps = ${env.lib_deps}
+lib_extra_dirs = .
+lib_ldf_mode = chain
+build_flags = ${sdl.build_flags} -I. -DFLEXHAL_PLATFORM_DESKTOP
