--- a/examples/gpio_blink/platformio.ini
+++ b/examples/gpio_blink/platformio.ini
@@ -14,3 +14,19 @@ lib_compat_mode = off
 build_unflags = -lstdc++
 extra_scripts = 
     pre:../scripts/sdl2_config.py
+
+[env:esp32dev]
+platform = espressif32
+board = esp32dev
+framework = arduino
+build_flags = 
+    -std=c++17
+    -fexceptions
+    -DFLEXHAL_PLATFORM_ESP32
+    -DFLEXHAL_FRAMEWORK_ARDUINO
+    -DFLEXHAL_RTOS_FREERTOS
+lib_deps = 
+    # ローカルのFlexHALライブラリを使用
+    symlink://../..
+lib_ldf_mode = deep+
+lib_compat_mode = off
