✨ FlexHALの3層構造（プラットフォーム・フレームワーク・RTOS）実装を強化
- 各レイヤー専用の名前空間と初期化・終了関数を追加
- platform.cpp/hpp, framework.cpp/hpp, rtos.cppを新規作成
- サンプルコードをFlexHALのロガー機能に統一
- 例外処理方針に合わせてtask.hを修正

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,26 +1,67 @@
 [platformio]
+; FlexHALプロジェクトの共通設定
+; 3層構造（プラットフォーム・フレームワーク・RTOS）に合わせた環境設定
+default_envs = arduino_esp32_blink, gpio_blink_esp32, simple_test_esp32
 
+; 共通設定
 [env]
-build_flags =-Wall -Wextra -Wreturn-local-addr -Werror=format -Werror=return-local-addr
+build_flags = -Wall -Wextra -Wreturn-local-addr -Werror=format -Werror=return-local-addr
 lib_ldf_mode = chain
 test_framework = googletest
 test_build_src = true
-; lib_deps=m5stack/M5Unified
+lib_deps =
+    symlink://.
 
-[sdl]
-build_flags = -O3 -xc++ -std=c++14 -lSDL2 
-  ; -arch arm64                                ; for arm mac
+; ===== プラットフォーム設定 =====
+
+; ESP32プラットフォーム設定
+[esp32_platform]
+platform = espressif32
+board = esp32dev
+framework = arduino
+monitor_speed = 115200
+build_flags =
+  ${env.build_flags}
+  -std=c++17
+  -DFLEXHAL_PLATFORM_ESP32
+  -DFLEXHAL_FRAMEWORK_ARDUINO
+  -DFLEXHAL_RTOS_FREERTOS
+
+; デスクトッププラットフォーム設定（SDL2使用）
+[desktop_platform]
+platform = native
+build_flags =
+  ${env.build_flags}
+  -O3 -xc++ -std=c++17 -lSDL2
+  -I"${PROJECT_DIR}/src"                     ; FlexHAL include path
   -I"/usr/local/include/SDL2"                ; for intel mac homebrew SDL2
   -L"/usr/local/lib"                         ; for intel mac homebrew SDL2
   -I"${sysenv.HOMEBREW_PREFIX}/include/SDL2" ; for arm mac homebrew SDL2
   -L"${sysenv.HOMEBREW_PREFIX}/lib"          ; for arm mac homebrew SDL2
-platform = native
-lib_deps = ${env.lib_deps} 
+  -DFLEXHAL_PLATFORM_DESKTOP
+  -DFLEXHAL_RTOS_SDL
+build_unflags = -lstdc++
+extra_scripts =
+  pre:examples/scripts/sdl2_config.py
 
+; ===== サンプルプロジェクト設定 =====
+
+; Arduino ESP32 Blinkサンプル - ESP32環境
+[env:arduino_esp32_blink]
+extends = esp32_platform
+build_src_filter = +<../examples/arduino_esp32_blink/src/*.cpp>
+
+; GPIO Blinkサンプル - ESP32環境
+[env:gpio_blink_esp32]
+extends = esp32_platform
+build_src_filter = +<../examples/gpio_blink/src/*.cpp>
+
+; GPIO Blinkサンプル - デスクトップ環境
 [env:gpio_blink_native]
-extends=sdl
-build_src_filter = -<*> +<../examples/gpio_blink/src>
-lib_deps = ${env.lib_deps}
-lib_extra_dirs = .
-lib_ldf_mode = chain
-build_flags = ${sdl.build_flags} -I. -DFLEXHAL_PLATFORM_DESKTOP
+extends = desktop_platform
+build_src_filter = +<../examples/gpio_blink/src/*.cpp>
+
+; Simple Testサンプル - ESP32環境
+[env:simple_test_esp32]
+extends = esp32_platform
+build_src_filter = +<../examples/simple_test/src/*.cpp>
