✨ 3層構造の実装強化とビルド設定の改善\n\n- FlexHALの3層構造（プラットフォーム・フレームワーク・RTOS）の実装を強化\n- library.jsonに"*"を追加してフレームワーク互換性を改善\n- .gitignoreを更新してサブディレクトリの.pioも無視するように設定\n- 各サンプルの個別のplatformio.iniを削除して、ルートの設定に統一

--- a/platformio.ini
+++ b/platformio.ini
@@ -30,6 +30,7 @@ build_flags =
 ; デスクトッププラットフォーム設定（SDL2使用）
 [desktop_platform]
 platform = native
+lib_deps = ${env.lib_deps}
 build_flags =
   ${env.build_flags}
   -O3 -xc++ -std=c++17 -lSDL2
